# CareerScope_AI

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/job_collector/: __init__.py  base.py  classification.py  collector.py  external_importer.py  sample_loader.py
backend/app/matching/: __init__.py  explanations.py  matcher.py  scoring.py  semantic.py  service.py  skill_gap.py
backend/app/models/: __init__.py  candidate.py  job.py  match.py
backend/tests/: conftest.py  test_api_endpoints.py  test_cv_parser.py  test_data_quality.py  test_database_config.py  test_database_models.py  test_explanation_generator.py  test_external_job_importer.py  test_health.py  test_job_analytics.py  test_job_classification.py  test_job_providers.py  test_matching_engine.py  test_portfolio_analyzer.py  test_sample_job_loader.py  test_semantic_matching.py  test_skill_gap.py  test_skill_taxonomy.py
data/sample/: sample_cv_data_engineer.txt  sample_jobs.json
data/taxonomies/: skills_taxonomy.json
docs/: architecture.md  data_model.md  roadmap.md
frontend/: streamlit_app.py
scripts/: import_sample_jobs.py  init_db.py  parse_cv.py  run_data_quality_report.py
(+27 files in other folders)
