[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "careerscope-ai"
version = "0.1.0"
description = "AI-powered CV, portfolio, and job-market matching platform."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "CareerScope AI Contributors" }
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
